@@ -123,14 +123,13 @@ class Link (gobject.GObject):
 		context.set_line_width (self.strength)
 		context.move_to (self.start[0], self.start[1])
 
-		#dx = self.start[0] - self.end[0]
-		#dy = self.start[1] - self.end[1]
-		#x2 = self.end[0] + (dx * 2 / 3)
-		#y2 = self.end[1] + (dy / 3)
-		#x3 = self.end[0] + (dx / 3)
-		#y3 = self.end[1] + (dy * 2 / 3)
-		#context.curve_to(x2,y2, x3, y3, self.end[0], self.end[1])
-		context.line_to (self.end[0], self.end[1])
+		if utils.use_bezier_curves:
+			dx = self.end[0] - self.start[0]
+			x2 = self.start[0] + dx / 2.0
+			x3 = self.end[0] - dx / 2.0
+			context.curve_to(x2, self.start[1], x3, self.end[1], self.end[0], self.end[1])
+		else:
+			context.line_to (self.end[0], self.end[1])
 
 		context.stroke ()
 		context.set_line_width (cwidth)
